# tex_parser

./: .gitignore  Cargo.toml
src/: known_symbols.rs  lexer.rs  lib.rs  parser.rs
src/snapshots/: interpreter__parser__tests__comments@1.snap  interpreter__parser__tests__comments@2.snap  interpreter__parser__tests__comments@3.snap  interpreter__parser__tests__known_envs@picture.snap  interpreter__parser__tests__known_envs@picture2.snap  interpreter__parser__tests__known_envs@simple_empty.snap  interpreter__parser__tests__known_envs@simple_txt.snap  interpreter__parser__tests__known_envs@simple_txt_alt.snap  interpreter__parser__tests__known_envs@with_args.snap  interpreter__parser__tests__known_macros@=_macro.snap  interpreter__parser__tests__known_macros@Any(n)_with_text.snap  interpreter__parser__tests__known_macros@accent1.snap  interpreter__parser__tests__known_macros@accent2.snap  interpreter__parser__tests__known_macros@accent3.snap  interpreter__parser__tests__known_macros@any1.snap  interpreter__parser__tests__known_macros@any2_1.snap  interpreter__parser__tests__known_macros@any2_2.snap  interpreter__parser__tests__known_macros@any2_macros.snap  interpreter__parser__tests__known_macros@bare_cmd.snap  interpreter__parser__tests__known_macros@block_cmd.snap  interpreter__parser__tests__known_macros@cite.snap  (+107 more)
symbols/: amsbsy.symbols.yml  amsfonts.symbols.yml  amsmath.symbols.yml  amsopn.symbols.yml  amssymb.symbols.yml  amstext.symbols.yml  base_latex.symbols.yml  fmt_symbols.py  graphicx.symbols.yml  mathtools.symbols.yml  symbols-schema.json  xparse.symbols.yml
