[package]
name = "tex_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
smallvec = { version = "1.11.0", features = ["serde", "const_generics"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.22"

[dev-dependencies]
criterion = "0.5.1"
insta = { version = "1.30.0", features = ["yaml"] }
rstest = "0.18.1"
